<resources>
    <string name="app_name">Dalil Tanta </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Comment">More Details</string>
    <string name="categorie">Category</string>
    <string name="Have">Have this</string>
    <string name="loginAsShop">Login As a Shop</string>
    <string name="loginAssUser">Login As a User</string>
    <string name="singWithFacebook">Sign in with facebook</string>
    <string name="name">Shop Name</string>
    <string name="address">Address</string>
    <string name="auth_failed">auth failed</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="imageToUpload">Image</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="Done">Done</string>
    <string name="home">Home</string>
    <string name="my_items">My Items</string>
    <string name="notifications">Notifications</string>
    <string name="facebook_app_id">301432483688418</string>



    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
</resources>
