<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        >
        <Spinner
            android:id="@+id/SpinnerCategorieSearch"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:prompt="@string/looking_for"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">

        </Spinner>

<LinearLayout
    android:id="@+id/switchLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="4dp"
    android:gravity="left">



    <ImageView
        android:id="@+id/publicImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="4dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_public" />

    <Switch

        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />

    <ImageView
        android:id="@+id/privateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingRight="12dp"
        android:paddingEnd="12dp"
        android:src="@drawable/ic_lock" />
</LinearLayout>

    </RelativeLayout>

<EditText

    android:id="@+id/description_editText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:hint="@string/Comment"
    android:background="@android:color/transparent"
    android:gravity="top"
    android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/darker_gray"
    android:layout_marginEnd="4dp">

    </View>

<RelativeLayout
    android:id="@+id/imageRelativeLO"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:visibility="gone"
    >

    <ImageView
        android:id="@+id/IsUploadedIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/buttonclose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_close_black_24dp"/>

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/wada7lena"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/upload_image"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"/>
    <ImageButton

        android:id="@+id/itemImageToUpload"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="right"
        android:layout_toLeftOf="@id/wada7lena"
        android:layout_toStartOf="@id/wada7lena"
        android:layout_margin="12dp"
        android:background="@null"
        android:src="@drawable/ic_image"
        />

    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:layout_margin="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>

</LinearLayout>
